差远了写完存储结构，问题在于非常迷茫，到底需要将存储的成本控制在哪里，有哪些数据应该放在内存中，需要多久同步一次内存和硬盘中的数据。等等这些具体的问题我没有想清楚。一个显而易见的例子就是Extend是否需要实现，还是说只是一个思想，数据库的设计里面多少能够落地到代码。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
       "binaryPath": "/home/lion/Documents/lionql/sql",
       "binaryArgs": []
     }
-  ]
+  ],
+  "C_Cpp.default.compileCommands": "/home/lion/Documents/lionql/_build/compile_commands.json",
+  "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild"
 }
