--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,10 @@
 project('lionql', 'cpp',
   version : '0.1',
-  default_options : ['warning_level=3', 'cpp_std=c++14'])
+  default_options : ['warning_level=3', 'cpp_std=c++23'])
 
+src = [
+  'lionql.cpp'
+]
 executable('lionql',
-           'lionql.cpp',
+           src,
            install : true)
